--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,500&display=swap"
     rel="stylesheet" />
 
-  <title>MILKYWAY</title>
+  <title>Milkyway Exchange</title>
 </head>
 
 <body>
