--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,9 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="MILKYWAY can get MILKY token and play something awesome!!!" />
-  <meta name="author" content="MILKY" />
-  <meta name="keywords" content="milky, milkyswap, milkyway, milky exchange, how to get milky, milky exchange" />
+  <meta name="description" content="MilkyWay Exchange is a new one of a kind decentralised trading platform offering a unique vested farming reward system that allows a high APR on staking and ensures the sustainability of the economy. The platform is focused on bringing real value to the community and turning into a true DAO." />
+  <meta name="author" content="MilkyWay Exchange" />
+  <meta name="keywords" content="milky, milkyswap, milkyway, milkyway exchange, bsc, cryptocurrency exchange, exchange" />
   <!-- icon -->
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
 
